--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>List of Recipes></h1>
     <ol>
-        <li><a></a></li>
+        <li><a href="./recipes/butter-chicken.html" >Butter Chicken</a></li>
     </ol>
 </body>
 </html>
